--- a/partition-fest/TODO
+++ b/partition-fest/TODO
@@ -20,3 +20,19 @@ arbitrary as now).
 Print out, in human-readable form, what we have learned about
 contingency (from a set of outcomes).
 
+----------------------------------------------------------------
+
+Insure that program is agnostic to outcome type in all areas, except 
+where knowledge is strictly necessary
+
+Add DNR data (modify outcome type, add stage where dataset is completed,
+and all nonexistent data is added with DNR default)
+
+Start creating implications.
+-create a set of every test and its outcome datatype = (test * outcome)
+-create its inverse
+-append them and name it literals
+-double fold across literals, testing if, for each pair of literals,
+ p->q, and adding them to a list of implications if true
+-turn this implication list into a graph
+-make the graph dot output, tred it, and see what happens
