Worked on removing tautologies - appears partially, but incompletely, successful

--- a/partition-fest/TODO
+++ b/partition-fest/TODO
@@ -23,3 +23,9 @@ Add a way to query specifically for readable contingency information
 Replace not DNR with RAN
 
 ----------------------------------------------------------------
+
+Remove contrapositives intelligently:
+
+----------------------------------------------------------------
+
+Remove tautologies
